nova_tests/strings/neg/plan131_ptr_arith_pos.nv
// Plan 131 Ф.2 — pointer arithmetic + deref-write via *mut int.
// Allocate 3 ints, write via pointer arithmetic, read back.
// EXPECT_OUTPUT: 10 20 30

module neg.plan131_ptr_arith_pos

import std.runtime.raw_mem.{RawMem}

fn main() -> () {
    unsafe {
        ro p = RawMem.alloc(3 * size_of[int]()) as *mut int
        *(p + 0) = 10
        *(p + 1) = 20
        *(p + 2) = 30
        println(*(p + 0), *(p + 1), *(p + 2))
    }
}
